--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Dashboard</title>
     <link rel="icon" href="favicon-32x32.png">
+    <title>Dashboard</title>
     <style>
         * {
             margin: 0;
@@ -73,6 +73,17 @@
             text-shadow: 0 0 10px #33fd30;
             transform: translateY(-5px);
         }
+
+        .content {
+            margin-top: 10px;
+            display: flex;
+            margin-left: 15px;
+            margin-top: 20px;
+        }
+
+        .content a {
+            margin: 5px;
+        }
     </style>
 </head>
 
@@ -80,6 +91,11 @@
     <div>
         <h1>This tab is hidden!</h1>
         <a href="https://rydrweb.github.io">Back</a>
+        <div class="content">
+            <a href="https://rydrweb.github.io/hidden2">Drive</a>
+            <a href="https://rydrweb.github.io/hidden3">New Tab</a>
+            <a href="https://rydrweb.github.io/hidden4">Canva</a>
+        </div>
     </div>
 </body>
 
