--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="icon" href="favicon-32x32.png">
+    <link rel="icon" href="favicon.ico">
     <title>Dashboard</title>
     <style>
         * {
